.github/scripts/fml/FmlParser.py
# Generated from Fml.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FmlParser ( Parser ):

    grammarFileName = "Fml.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'group'", "'extends'", "'then'", "'source'", 
                     "'target'", "'{'", "'}'", "'('", "')'", "'<<'", "'>>'", 
                     "':'", "','", "'+'" ]

    symbolicNames = [ "<INVALID>", "GROUP", "EXTENDS", "THEN", "SOURCE", 
                      "TARGET", "LBRACE", "RBRACE", "LPAREN", "RPAREN", 
                      "LTLT", "GTGT", "COLON", "COMMA", "PLUS", "ID", "NUMBER", 
                      "STRING", "LINE_COMMENT", "BLOCK_COMMENT", "WS", "ANY" ]

    RULE_program = 0
    RULE_group = 1
    RULE_params = 2
    RULE_param = 3
    RULE_extendsClause = 4
    RULE_typeMode = 5
    RULE_typeModeBody = 6
    RULE_body = 7
    RULE_element = 8
    RULE_thenClause = 9
    RULE_block = 10
    RULE_invocation = 11
    RULE_anyToken = 12

    ruleNames =  [ "program", "group", "params", "param", "extendsClause", 
                   "typeMode", "typeModeBody", "body", "element", "thenClause", 
                   "block", "invocation", "anyToken" ]

    EOF = Token.EOF
    GROUP=1
    EXTENDS=2
    THEN=3
    SOURCE=4
    TARGET=5
    LBRACE=6
    RBRACE=7
    LPAREN=8
    RPAREN=9
    LTLT=10
    GTGT=11
    COLON=12
    COMMA=13
    PLUS=14
    ID=15
    NUMBER=16
    STRING=17
    LINE_COMMENT=18
    BLOCK_COMMENT=19
    WS=20
    ANY=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(FmlParser.EOF, 0)

        def group(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FmlParser.GroupContext)
            else:
                return self.getTypedRuleContext(FmlParser.GroupContext,i)


        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FmlParser.ElementContext)
            else:
                return self.getTypedRuleContext(FmlParser.ElementContext,i)


        def getRuleIndex(self):
            return FmlParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = FmlParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4193662) != 0):
                self.state = 28
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 26
                    self.group()
                    pass

                elif la_ == 2:
                    self.state = 27
                    self.element()
                    pass


                self.state = 32
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 33
            self.match(FmlParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GroupContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def GROUP(self):
            return self.getToken(FmlParser.GROUP, 0)

        def params(self):
            return self.getTypedRuleContext(FmlParser.ParamsContext,0)


        def body(self):
            return self.getTypedRuleContext(FmlParser.BodyContext,0)


        def ID(self):
            return self.getToken(FmlParser.ID, 0)

        def extendsClause(self):
            return self.getTypedRuleContext(FmlParser.ExtendsClauseContext,0)


        def typeMode(self):
            return self.getTypedRuleContext(FmlParser.TypeModeContext,0)


        def getRuleIndex(self):
            return FmlParser.RULE_group

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGroup" ):
                listener.enterGroup(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGroup" ):
                listener.exitGroup(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGroup" ):
                return visitor.visitGroup(self)
            else:
                return visitor.visitChildren(self)




    def group(self):

        localctx = FmlParser.GroupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_group)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.match(FmlParser.GROUP)
            self.state = 36
            localctx.name = self.match(FmlParser.ID)
            self.state = 37
            self.params()
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 38
                self.extendsClause()


            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 41
                self.typeMode()


            self.state = 44
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAREN(self):
            return self.getToken(FmlParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(FmlParser.RPAREN, 0)

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FmlParser.ParamContext)
            else:
                return self.getTypedRuleContext(FmlParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(FmlParser.COMMA)
            else:
                return self.getToken(FmlParser.COMMA, i)

        def getRuleIndex(self):
            return FmlParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = FmlParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(FmlParser.LPAREN)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4 or _la==5:
                self.state = 47
                self.param()
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==13:
                    self.state = 48
                    self.match(FmlParser.COMMA)
                    self.state = 49
                    self.param()
                    self.state = 54
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 57
            self.match(FmlParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.direction = None # Token
            self.pname = None # Token
            self.ptype = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(FmlParser.ID)
            else:
                return self.getToken(FmlParser.ID, i)

        def SOURCE(self):
            return self.getToken(FmlParser.SOURCE, 0)

        def TARGET(self):
            return self.getToken(FmlParser.TARGET, 0)

        def COLON(self):
            return self.getToken(FmlParser.COLON, 0)

        def getRuleIndex(self):
            return FmlParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = FmlParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            localctx.direction = self._input.LT(1)
            _la = self._input.LA(1)
            if not(_la==4 or _la==5):
                localctx.direction = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 60
            localctx.pname = self.match(FmlParser.ID)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 61
                self.match(FmlParser.COLON)
                self.state = 62
                localctx.ptype = self.match(FmlParser.ID)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExtendsClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.parent = None # Token

        def EXTENDS(self):
            return self.getToken(FmlParser.EXTENDS, 0)

        def ID(self):
            return self.getToken(FmlParser.ID, 0)

        def getRuleIndex(self):
            return FmlParser.RULE_extendsClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExtendsClause" ):
                listener.enterExtendsClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExtendsClause" ):
                listener.exitExtendsClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExtendsClause" ):
                return visitor.visitExtendsClause(self)
            else:
                return visitor.visitChildren(self)




    def extendsClause(self):

        localctx = FmlParser.ExtendsClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_extendsClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(FmlParser.EXTENDS)
            self.state = 66
            localctx.parent = self.match(FmlParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeModeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LTLT(self):
            return self.getToken(FmlParser.LTLT, 0)

        def typeModeBody(self):
            return self.getTypedRuleContext(FmlParser.TypeModeBodyContext,0)


        def GTGT(self):
            return self.getToken(FmlParser.GTGT, 0)

        def getRuleIndex(self):
            return FmlParser.RULE_typeMode

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeMode" ):
                listener.enterTypeMode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeMode" ):
                listener.exitTypeMode(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeMode" ):
                return visitor.visitTypeMode(self)
            else:
                return visitor.visitChildren(self)




    def typeMode(self):

        localctx = FmlParser.TypeModeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_typeMode)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(FmlParser.LTLT)
            self.state = 69
            self.typeModeBody()
            self.state = 70
            self.match(FmlParser.GTGT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeModeBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(FmlParser.ID)
            else:
                return self.getToken(FmlParser.ID, i)

        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(FmlParser.PLUS)
            else:
                return self.getToken(FmlParser.PLUS, i)

        def getRuleIndex(self):
            return FmlParser.RULE_typeModeBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeModeBody" ):
                listener.enterTypeModeBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeModeBody" ):
                listener.exitTypeModeBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeModeBody" ):
                return visitor.visitTypeModeBody(self)
            else:
                return visitor.visitChildren(self)




    def typeModeBody(self):

        localctx = FmlParser.TypeModeBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typeModeBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(FmlParser.ID)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 73
                self.match(FmlParser.PLUS)
                self.state = 74
                self.match(FmlParser.ID)
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(FmlParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(FmlParser.RBRACE, 0)

        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FmlParser.ElementContext)
            else:
                return self.getTypedRuleContext(FmlParser.ElementContext,i)


        def getRuleIndex(self):
            return FmlParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = FmlParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(FmlParser.LBRACE)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4193662) != 0):
                self.state = 81
                self.element()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 87
            self.match(FmlParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def THEN(self):
            return self.getToken(FmlParser.THEN, 0)

        def thenClause(self):
            return self.getTypedRuleContext(FmlParser.ThenClauseContext,0)


        def LBRACE(self):
            return self.getToken(FmlParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(FmlParser.RBRACE, 0)

        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FmlParser.ElementContext)
            else:
                return self.getTypedRuleContext(FmlParser.ElementContext,i)


        def LPAREN(self):
            return self.getToken(FmlParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(FmlParser.RPAREN, 0)

        def anyToken(self):
            return self.getTypedRuleContext(FmlParser.AnyTokenContext,0)


        def getRuleIndex(self):
            return FmlParser.RULE_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElement" ):
                listener.enterElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElement" ):
                listener.exitElement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElement" ):
                return visitor.visitElement(self)
            else:
                return visitor.visitChildren(self)




    def element(self):

        localctx = FmlParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_element)
        self._la = 0 # Token type
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.match(FmlParser.THEN)
                self.state = 90
                self.thenClause()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.match(FmlParser.LBRACE)
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4193662) != 0):
                    self.state = 92
                    self.element()
                    self.state = 97
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 98
                self.match(FmlParser.RBRACE)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 99
                self.match(FmlParser.LPAREN)
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4193662) != 0):
                    self.state = 100
                    self.element()
                    self.state = 105
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 106
                self.match(FmlParser.RPAREN)
                pass
            elif token in [1, 2, 4, 5, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21]:
                self.enterOuterAlt(localctx, 4)
                self.state = 107
                self.anyToken()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ThenClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(FmlParser.BlockContext,0)


        def invocation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FmlParser.InvocationContext)
            else:
                return self.getTypedRuleContext(FmlParser.InvocationContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(FmlParser.COMMA)
            else:
                return self.getToken(FmlParser.COMMA, i)

        def getRuleIndex(self):
            return FmlParser.RULE_thenClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterThenClause" ):
                listener.enterThenClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitThenClause" ):
                listener.exitThenClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitThenClause" ):
                return visitor.visitThenClause(self)
            else:
                return visitor.visitChildren(self)




    def thenClause(self):

        localctx = FmlParser.ThenClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_thenClause)
        try:
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.block()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.invocation()
                self.state = 116
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 112
                        self.match(FmlParser.COMMA)
                        self.state = 113
                        self.invocation() 
                    self.state = 118
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(FmlParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(FmlParser.RBRACE, 0)

        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FmlParser.ElementContext)
            else:
                return self.getTypedRuleContext(FmlParser.ElementContext,i)


        def getRuleIndex(self):
            return FmlParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = FmlParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(FmlParser.LBRACE)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4193662) != 0):
                self.state = 122
                self.element()
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 128
            self.match(FmlParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InvocationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.callee = None # Token

        def LPAREN(self):
            return self.getToken(FmlParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(FmlParser.RPAREN, 0)

        def ID(self):
            return self.getToken(FmlParser.ID, 0)

        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FmlParser.ElementContext)
            else:
                return self.getTypedRuleContext(FmlParser.ElementContext,i)


        def getRuleIndex(self):
            return FmlParser.RULE_invocation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInvocation" ):
                listener.enterInvocation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInvocation" ):
                listener.exitInvocation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInvocation" ):
                return visitor.visitInvocation(self)
            else:
                return visitor.visitChildren(self)




    def invocation(self):

        localctx = FmlParser.InvocationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_invocation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            localctx.callee = self.match(FmlParser.ID)
            self.state = 131
            self.match(FmlParser.LPAREN)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4193662) != 0):
                self.state = 132
                self.element()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 138
            self.match(FmlParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AnyTokenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(FmlParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(FmlParser.RBRACE, 0)

        def LPAREN(self):
            return self.getToken(FmlParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(FmlParser.RPAREN, 0)

        def THEN(self):
            return self.getToken(FmlParser.THEN, 0)

        def getRuleIndex(self):
            return FmlParser.RULE_anyToken

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnyToken" ):
                listener.enterAnyToken(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnyToken" ):
                listener.exitAnyToken(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnyToken" ):
                return visitor.visitAnyToken(self)
            else:
                return visitor.visitChildren(self)




    def anyToken(self):

        localctx = FmlParser.AnyTokenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_anyToken)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            _la = self._input.LA(1)
            if _la <= 0 or (((_la) & ~0x3f) == 0 and ((1 << _la) & 968) != 0):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





